Edit presentation and tidy up file names

--- a/Session_2/Session2_Intro_to_base_R.nb.html
+++ b/Session_2/Session2_Intro_to_base_R.nb.html
@@ -2128,7 +2128,7 @@ $(document).ready(function () {
 <!-- code folding -->
 <script>
 $(document).ready(function () {
-  window.initializeSourceEmbed("Session2_Intro_to_R.Rmd");
+  window.initializeSourceEmbed("Session2_Intro_to_base_R.Rmd");
   window.initializeCodeFolding("show" === "show");
 });
 </script>
